--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>ComingSoon - Bootstrap Coming Soon Template</title>
+  <title>ComingSoon - Sparkplug</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,8 +37,8 @@
     <div class="container d-flex flex-column align-items-center">
 
       <h1>ComingSoon</h1>
-      <h2>We're working hard to improve our website and we'll ready to launch after</h2>
-      <div class="countdown d-flex justify-content-center" data-count="2021/12/5">
+      <h2>We're working hard to give you the best experience with Sparkplug</h2>
+      <div class="countdown d-flex justify-content-center" data-count="2021/10/7">
         <div>
           <h3>%d</h3>
           <h4>Days</h4>
